    build environment, in case it is different from the one where the
    autobuilder is being run.  This affects what packages cabal-debian
    thinks are built into the compiler.  I have non-working code to actually
    look in the environment for this information, but it depends on having
    the compiler already installed there.
  * Greatly sped-up cabal-debian.

 -- David Fox <dsf@seereason.com>  Fri, 19 Aug 2011 08:34:36 -0700

haskell-debian (3.57) unstable; urgency=low

  * Re-order generated dependencies so we are more likely to build
    with newer packages installed.

 -- David Fox <dsf@seereason.com>  Tue, 16 Aug 2011 19:04:29 -0700

haskell-debian (3.56-1) unstable; urgency=low

  * I created a new repository by importing the sid version of
    haskell-debian-3.55 and then applying my patches.  This is because
    I don't understand why Marco's repository is so different from the
    code in sid.  At some point we will get this all sorted out.

 -- David Fox <dsf@seereason.com>  Tue, 16 Aug 2011 13:00:15 -0700

haskell-debian (3.55-2) unstable; urgency=low

  * Build against parsec 3

 -- Joachim Breitner <nomeata@debian.org>  Mon, 13 Jun 2011 18:13:10 +0200

haskell-debian (3.55-1) unstable; urgency=low

  * Use ghc instead of ghc6
  * control: Standards-Version: Bump, no changes needed.
  * control: haskell-debian-utils: Adds Recommends: apt-file.
  * New upstream version.
  * patches/dont-build-teste.patch: Update patch to new upstream
    version.
  * control: Update dependency on haxml to 1.20.*.
  * control: Depends on utf8-string.

 -- Marco Túlio Gontijo e Silva <marcot@debian.org>  Fri, 03 Jun 2011 22:49:23 -0300

haskell-debian (3.47-3) unstable; urgency=low

  * Re-add dont-build-tests.patch, lost in the previous upload 

 -- Joachim Breitner <nomeata@debian.org>  Thu, 24 Jun 2010 19:33:30 +0200

haskell-debian (3.47-2) unstable; urgency=low

  [ Erik de Castro Lopo ]
  * debian/control: Fix lintian warnings.